--- a/styles.css
+++ b/styles.css
@@ -258,6 +258,7 @@ body {
     letter-spacing: 1px;
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     text-align: center;
+    margin-bottom: 20px;
 }
 
 .description {
@@ -276,6 +277,7 @@ body {
     height: 40px;
     padding: 0 10px;
     border-radius: 20px;
+    border: 1px solid #545D63;
 }
 
 .resultsLabel {
@@ -595,12 +597,12 @@ body {
     }
 
     .productTitle {
-        font-size: 18px;
+        font-size: 17px;
         letter-spacing: 1px;
         font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
         text-align: center;
         margin-top: 20px;
-        height: 13%;
+        height: 15%;
     }
 
     .priceValue {
@@ -677,12 +679,12 @@ body {
     }
 
     .productTitle {
-        font-size: 18px;
+        font-size: 17px;
         letter-spacing: 1px;
         font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
         text-align: center;
         margin-top: 20px;
-        height: 13%;
+        height: 18%;
     }
 
     .priceValue {
@@ -793,12 +795,12 @@ body {
     }
 
     .productTitle {
-        font-size: 18px;
+        font-size: 17px;
         letter-spacing: 1px;
         font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
         text-align: center;
         margin-top: 20px;
-        height: 13%;
+        height: 15%;
     }
 
     .priceValue {
@@ -960,12 +962,12 @@ body {
     }
 
     .productTitle {
-        font-size: 18px;
+        font-size: 16px;
         letter-spacing: 1px;
         font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
         text-align: center;
         margin-top: 20px;
-        height: 8%;
+        height: 13%;
     }
 
     .priceValue {
@@ -978,7 +980,7 @@ body {
     .description {
         margin-top: 20px;
         text-align: start;
-        font-size: 18px;
+        font-size: 16px;
         letter-spacing: 1px;
         font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
         word-wrap: break-word;
@@ -1199,7 +1201,8 @@ body {
         font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
         text-align: center;
         margin-top: 0px;
-        height: 10%;
+        height: 13%;
+        margin-bottom: 20px;
     }
 
     .priceValue {
@@ -1485,12 +1488,12 @@ body {
     }
 
     .productTitle {
-        font-size: 18px;
+        font-size: 15px;
         letter-spacing: 1px;
         font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
         text-align: center;
         margin-top: 0px;
-        height: 10%;
+        height: 13%;
     }
 
     .priceValue {
@@ -1498,6 +1501,7 @@ body {
         letter-spacing: 1px;
         font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
         text-align: center;
+        margin-bottom: 20px;
     }
 
     .description {
